--- a/package.json
+++ b/package.json
@@ -11,19 +11,16 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
-    "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
